--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" theme="dark" style="background-color: #000000; color: #FFFFFF;"> 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>404 Not Found</title>
     </head>
     <body>
-        <div style="text-align: left;column-count: 2;">
-            <img src="/jpeg" style="width: 110%; height: auto;">
-
-        <div style="text-align: center;">
-            <h1>404</h1>
-                <h4>Not found</h4>
-            <p>Sorry, the page you are looking for does not exist.</p>            
+        <box 
+        <div style="align-items: center; display: flex; justify-content: center; height: 100vh; background-color: #000000;">
+            <div style="text-align: left; column-width: 50%;">
+                <img src="/404-not-found.jpeg" style="width: 200px; ;height: auto;">
+            </div>
+            <div style="text-align: left; column-width: 50%; vertical-align: auto;">
+                <h1>404</h1>
+                    <h4>Not found</h4>
+                <p>Sorry, the page you are looking for does not exist.</p>            
+            </div>
         </div>
     </body>
 </html>
