--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
         <title>404 Not Found</title>
     </head>
     <body>
-        <box 
-        <div style="align-items: center; display: flex; justify-content: center; height: 100vh; background-color: #000000;">
-            <div style="text-align: left; column-width: 50%;">
-                <img src="/404-not-found.jpeg" style="width: 200px; ;height: auto;">
+        <div style="align-items: center; 
+        display: flex; 
+        justify-content: center; 
+        height: 100vh; 
+        background-color: #000000;">    
+            <div style="text-align: left;
+             column-width: 50%;">
+                <img src="/404-not-found.jpeg" 
+                style="width: 200px; ;height: auto;">
             </div>
-            <div style="text-align: left; column-width: 50%; vertical-align: auto;">
+            <div style="text-align: left; 
+            column-width: 50%; 
+            vertical-align: auto;">
                 <h1>404</h1>
                     <h4>Not found</h4>
                 <p>Sorry, the page you are looking for does not exist.</p>            
