--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
             <div style="text-align: left; 
             column-width: 50%; 
             vertical-align: auto;">
-                <h1>404</h1>
-                    <h4>Not found</h4>
-                <p>Sorry, the page you are looking for does not exist.</p>            
+                <h1 style="display: inline;">404 </h1>
+                <h3 style="display: inline;">not found</h3>              
+                <p>Sorry, the page you are looking for does not exist.</p>   
+                <p>It might have been removed, or you may have entered the wrong URL.</p>
+                <p>Please check the URL and try again.</p>
+                <p>If you think this is a mistake, please contact us at:</p>
+                <p>something@protonmail.me</p>
+                <p></p>
+                <h5>Return to the <a href="localhost:3000">home page</h5>
             </div>
         </div>
     </body>
 </html>
+
+
