--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div style="text-align: left; 
             column-width: 50%; 
             vertical-align: auto;">
-                <h1 style="display: inline;">404 </h1>
+                <h1 style="color: darkgray; display: inline;">404 </h1>
                 <h3 style="display: inline;">not found</h3>              
                 <p>Sorry, the page you are looking for does not exist.</p>   
                 <p>It might have been removed, or you may have entered the wrong URL.</p>
