--- a/index.html
+++ b/index.html
@@ -34,4 +34,54 @@
     </body>
 </html>
 
+<!--
+style="background-color: #000000; color: #FFFFFF;"
 
+display: none; - to hide the element
+display: block; - to show the element
+display: inline; - to show the element inline
+display: inline-block; - to show the element inline with block properties
+display: flex; - to show the element as a flex container
+display: grid; - to show the element as a grid container
+display: table; - to show the element as a table
+display: table-row; - to show the element as a table row
+display: table-cell; - to show the element as a table cell
+display: table-caption; - to show the element as a table caption
+display: table-column; - to show the element as a table column
+display: table-column-group; - to show the element as a table column group
+display: table-header-group; - to show the element as a table header group
+display: table-footer-group; - to show the element as a table footer group
+display: list-item; - to show the element as a list item
+display: block-inline; - to show the element as a block inline
+display: block-inline-block; - to show the element as a block inline block
+display: block-flex; - to show the element as a block flex
+
+width: 100%; - to make the element take the full width of its parent
+width: 75%; - to make the element take 75% of its parent
+width: 50%; - to make the element take 50% of its parent
+width: 25%; - to make the element take 25% of its parent
+
+heigth: 100px - to set the height of the element to 100px
+heigth usualy doesnt work with percentage
+heigth auto - to set the height of the element to auto
+
+align-items: center; - to align the items in the center of the flex container
+justify-content: center; - to justify the items in the center of the flex container
+align-items: flex-start; - to align the items at the start of the flex container
+
+margin - to set the margin of the element
+margin: 0 auto; - to center the element horizontally
+margin: 0; - to remove the margin of the element
+margin: 10px; - to set the margin of the element to 10px
+
+padding - to set the padding of the element
+padding: 0; - to remove the padding of the element
+padding: 10px; - to set the padding of the element to 10px
+
+floeat: left; - to forcibly float the element to the left or close to the parent element border
+float: right; - to forcibly float the element to the right or close to the parent element border
+float: none; - to remove the float of the element
+float: inherit; - to inherit the float of the parent element
+float: initial; - to set the float of the element to its default value
+
+-->
