--- a/index.html
+++ b/index.html
@@ -84,4 +84,13 @@ float: none; - to remove the float of the element
 float: inherit; - to inherit the float of the parent element
 float: initial; - to set the float of the element to its default value
 
+font-family: Arial, sans-serif; - to set the font family of the element
+font-size: 16px; - to set the font size of the element
+font-weight: bold; - to set the font weight of the element
+font-style: italic; - to set the font style of the element
+font-variant: small-caps; - to set the font variant of the element
+font-stretch: condensed; - to set the font stretch of the element
+font-variant-caps: all-small-caps; - to set the font variant caps of the element
+font-variant-east-asian: ruby; - to set the font variant east asian of the element
+
 -->
