--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 
-<html lang="en" theme="dark" style="background-color: #000000; color: #FFFFFF;"> 
+<html lang="en" theme="dark" style="background-image: url(background.jpeg); 
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-position: bottom;
+background-size:cover;
+color: #FFFFFF;"> 
+<style>
+    .button {
+        background-color: #ffffff; /* Green */
+        border: none;
+        color: rgb(0, 0, 0);
+        padding: 5px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 1px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+    .button:hover {
+        background-color: #737373;
+    }
+</style>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +31,34 @@
     </head>
     <body>
         <div style="align-items: center; 
+        height: 300px;
+        width: 550px;
         display: flex; 
-        justify-content: center; 
-        height: 100vh; 
-        background-color: #000000;">    
+        justify-content: center;  
+        text-align: center;
+        transform: translate(0%, 60%);
+        background-color: #000000;
+        margin: 10px auto;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 15px 15px 18px rgba(0, 0, 0, 0.5);
+        ">    
             <div style="text-align: left;
-             column-width: 50%;">
+             column-width: 30%;
+             margin: 10px;">
                 <img src="/404-not-found.jpeg" 
-                style="width: 200px; ;height: auto;">
+                style="width: 225px; ;height: auto;">
             </div>
             <div style="text-align: left; 
-            column-width: 50%; 
-            vertical-align: auto;">
+            column-width: 30%; 
+            vertical-align: auto;
+            margin: 10px; padding-bottom: 10px;">
                 <h1 style="color: darkgray; display: inline;">404 </h1>
                 <h3 style="display: inline;">not found</h3>              
-                <p>Sorry, the page you are looking for does not exist.</p>   
-                <p>It might have been removed, or you may have entered the wrong URL.</p>
-                <p>Please check the URL and try again.</p>
-                <p>If you think this is a mistake, please contact us at:</p>
-                <p>something@protonmail.me</p>
-                <p></p>
-                <h5>Return to the <a href="localhost:3000">home page</h5>
+                <p>Sorry, the page you are looking for does not exist. It might have been removed. Please check the URL and try again.</p>
+                <p>If you think this is a mistake, please contact us at: something@protonmail.me</p>
+                <a href="https://www.w3docs.com/" class="button" style="display: inline;">Home Page</a>
+                <a href="https://www.w3docs.com/" class="button" style="display: inline;;">Report a problem</a>
             </div>
         </div>
     </body>
