--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ color: #FFFFFF;">
                 <h3 style="display: inline;">not found</h3>              
                 <p>Sorry, the page you are looking for does not exist. It might have been removed. Please check the URL and try again.</p>
                 <p>If you think this is a mistake, please contact us at: something@protonmail.me</p>
-                <a href="https://www.w3docs.com/" class="button" style="display: inline;">Home Page</a>
-                <a href="https://www.w3docs.com/" class="button" style="display: inline;;">Report a problem</a>
+                <a href="google.com" class="button" style="display: inline;">Home Page</a>
+                <a href="https://github.com/Thornchocolate" class="button" style="display: inline;;">Report a problem</a>
             </div>
         </div>
     </body>
