--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: bottom;
 background-size:cover;
-color: #FFFFFF;"> 
+color: #ffffff;"> 
 <style>
     .button {
         background-color: #ffffff; /* Green */
@@ -18,7 +18,7 @@ color: #FFFFFF;">
         font-size: 16px;
         margin: 2px 1px;
         cursor: pointer;
-        border-radius: 5px;
+        border-radius: 3px;
     }
     .button:hover {
         background-color: #737373;
@@ -31,12 +31,12 @@ color: #FFFFFF;">
     </head>
     <body>
         <div style="align-items: center; 
-        height: 300px;
-        width: 550px;
+        height: 250px;
+        width: 600px;
         display: flex; 
         justify-content: center;  
         text-align: center;
-        transform: translate(0%, 60%);
+        transform: translate(0%, 80%);
         background-color: #000000;
         margin: 10px auto;
         padding: 10px;
@@ -52,11 +52,13 @@ color: #FFFFFF;">
             <div style="text-align: left; 
             column-width: 30%; 
             vertical-align: auto;
-            margin: 10px; padding-bottom: 10px;">
-                <h1 style="color: darkgray; display: inline;">404 </h1>
-                <h3 style="display: inline;">not found</h3>              
-                <p>Sorry, the page you are looking for does not exist. It might have been removed. Please check the URL and try again.</p>
-                <p>If you think this is a mistake, please contact us at: something@protonmail.me</p>
+            margin: 10px; padding-bottom: 20px;">
+                <p style="color: darkgray; display: inline; border-radius: 10px; font-size: 40px; ">404 </p>
+                <h3 style="display: inline; font: caption;">
+                    NOT FOUND
+                </h3>              
+                <p style="margin-top: 0;" >Sorry, the page you are looking for does not exist. It might have been removed. Please check the URL and try again.</p>
+                <p style="margin-bottom: 20px;">If you think this is a mistake, please report the problem.</p>
                 <a href="google.com" class="button" style="display: inline;">Home Page</a>
                 <a href="https://github.com/Thornchocolate" class="button" style="display: inline;;">Report a problem</a>
             </div>
