--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ color: #ffffff;">
         background-color: #ffffff; /* Green */
         border: none;
         color: rgb(0, 0, 0);
-        padding: 5px 10px;
+        padding: 5px 13px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
@@ -32,7 +32,7 @@ color: #ffffff;">
     <body>
         <div style="align-items: center; 
         height: 250px;
-        width: 600px;
+        width: 550px;
         display: flex; 
         justify-content: center;  
         text-align: center;
@@ -52,11 +52,11 @@ color: #ffffff;">
             <div style="text-align: left; 
             column-width: 30%; 
             vertical-align: auto;
-            margin: 10px; padding-bottom: 20px;">
-                <p style="color: darkgray; display: inline; border-radius: 10px; font-size: 40px; ">404 </p>
-                <h3 style="display: inline; font: caption;">
-                    NOT FOUND
-                </h3>              
+            margin: 10px; padding-bottom: 15px;">
+                <p style="color: rgb(153, 153, 153); display: inline; font-size: 25px;">ERROR:</p>
+                <h1 style="display: inline; font: caption; font-size: 25px;">
+                    Page Not Found
+                </h1>              
                 <p style="margin-top: 0;" >Sorry, the page you are looking for does not exist. It might have been removed. Please check the URL and try again.</p>
                 <p style="margin-bottom: 20px;">If you think this is a mistake, please report the problem.</p>
                 <a href="google.com" class="button" style="display: inline;">Home Page</a>
